--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>goit-js-hw-12-countries</title>
-  </head>
 
-  <body>
     
+  <body>
+    <div class="wrapper">
+      <div class="inner_input">
+        <label for="input">Enter country</label>
+        <input id="input" type="text" />
+        <ul class="list_countries"></ul>
+      </div>
+      <div class="inner_country"></div>
+    </div>
   </body>
 </html>
